--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,6 +1,14 @@
 body
 {
-    color: darkslategray;
+    color: rgb(26, 94, 94);
     text-align: center;
     font-family: "Arial";
+}
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
 }
