--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -12,3 +12,11 @@ body
     border: 1px solid #DDD;
     margin: 0 auto;
 }
+#cabecera
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #aDD;
+    margin: 0 auto;
+}
