--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -2,7 +2,7 @@ body
 {
     color: rgb(26, 94, 94);
     text-align: center;
-    font-family: "Arial";
+    font-family: "Courier";
 }
 #container
 {
